# docker-pwless-pgadmin4

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-multi.yml  docker-compose.yml  primary_entrypoint.sh
.github/workflows/: build-and-push.yml  build-image.yml  master.yml  pr.yml  tag.yml
test/: pyproject.toml  test.py
tests/: requirements.txt  test_db_listing.py
